
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char B64_CharToCode (char) ;
 scalar_t__ TRUE ;

int B64_Decode(char *set, char *source, int len)
{
 int i,j;
 char a1,a2,a3,a4;
 char *src;
 int f1,f2,f3,f4;
 src = source;
 i = 0;
 j = 0;
 while (TRUE)
 {
  f1 = f2 = f3 = f4 = 0;
  if (i >= len)
  {
   break;
  }
  f1 = 1;
  a1 = B64_CharToCode(src[i]);
  if (a1 == -1)
  {
   f1 = 0;
  }
  if (i >= len + 1)
  {
   a2 = 0;
  }
  else
  {
   a2 = B64_CharToCode(src[i + 1]);
   f2 = 1;
   if (a2 == -1)
   {
    f2 = 0;
   }
  }
  if (i >= len + 2)
  {
   a3 = 0;
  }
  else
  {
   a3 = B64_CharToCode(src[i + 2]);
   f3 = 1;
   if (a3 == -1)
   {
    f3 = 0;
   }
  }
  if (i >= len + 3)
  {
   a4 = 0;
  }
  else
  {
   a4 = B64_CharToCode(src[i + 3]);
   f4 = 1;
   if (a4 == -1)
   {
    f4 = 0;
   }
  }
  if (f1 && f2)
  {
   if (set)
   {
    set[j] = (a1 << 2) + (a2 >> 4);
   }
   j++;
  }
  if (f2 && f3)
  {
   if (set)
   {
    set[j] = (a2 << 4) + (a3 >> 2);
   }
   j++;
  }
  if (f3 && f4)
  {
   if (set)
   {
    set[j] = (a3 << 6) + a4;
   }
   j++;
  }
  i += 4;
 }
 return j;
}
